# libkcoidc

./: .clang-format  .clang_complete  .editorconfig  .gitignore  .golangci.yaml  .license-ranger.json  .travis.yml  CHANGELOG.md  Dockerfile.build  Gopkg.toml  Jenkinsfile  LICENSE.txt  Makefile  Makefile.in  README.md  bootstrap.sh  claims.go  configure.ac  doc.go  errors.go  errors_test.go  fetch.go  glide.yaml  go.mod  go.sum  kcoidc.go  libkcoidc.pc.in  logger.go  oidc.go  provider.go  signing_method.go  utils.go
cmd/benchmark/: main.go
cmd/validate/: main.go
examples/: benchmark.cpp  validate.c
internal/version/: version.go
lib/kcoidc/: api.go  callbacks.c  debug.go  discovery.go  errors.go  initialize.go  kcoidc_callbacks.h  logger.go  main.go  validate.go
lib/libkcoidc/: main.go
python/: benchmark.py  pykcoidc.c  setup.py  validate.py
python/src/: __init__.py
